upload internship work

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,15 @@
 ---
 ---
+@preprints{lee2025RAG,
+  abbr={Preprint},
+  title={RAG-Enhanced Collaborative LLM Agents for Drug Discovery},
+  author={Namkyeong Lee and Edward De Brouwer and Ehsan Hajiramezanali and Chanyoung Park and Gabriele Scalia},
+  year={2025},
+  url={https://arxiv.org/abs/2502.17506},
+  html={https://arxiv.org/abs/2502.17506}
+}
+
+
 @inproceedings{kim2025subgraph,
   abbr={ICLR},
   title={Subgraph Federated Learning for Local Generalization},
