--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,24 @@
 ---
 ---
+@preprints{kim2025MedRep,
+  abbr={Preprint},
+  title={MedRep: Medical Concept Representation for General Electronic Health Record Foundation Models},
+  author={Junmo Kim and Namkyeong Lee and Jiwon Kim and Kwangsoo Kim},
+  year={2025},
+  url={https://arxiv.org/abs/2504.08329},
+  html={https://arxiv.org/abs/2504.08329},
+  code={https://github.com/kicarussays/MedRep}
+}
+
+@preprints{laghuvarapu2025MolTextQA,
+  abbr={Preprint},
+  title={MolTextQA: A Curated Question-Answering Dataset and Benchmark for Molecular Structure-Text Relationship Learning},
+  author={Siddhartha Laghuvarapu and Namkyeong Lee and Chufan Gao and Jimeng Sun},
+  year={2025},
+  url={https://namkyeong.github.io/},
+  html={https://namkyeong.github.io/}
+}
+
 @preprints{lee2025RAG,
   abbr={Preprint},
   title={RAG-Enhanced Collaborative LLM Agents for Drug Discovery},
@@ -18,7 +37,7 @@
   year={2025},
   url={https://openreview.net/forum?id=cH65nS5sOz},
   html={https://openreview.net/forum?id=cH65nS5sOz},
-  code={https://namkyeong.github.io/}
+  code={https://github.com/sung-won-kim/FedLoG}
 }
 
 
