add author notes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,8 @@
   author={Siddhartha Laghuvarapu and Namkyeong Lee and Chufan Gao and Jimeng Sun},
   year={2025},
   url={https://namkyeong.github.io/},
-  html={https://namkyeong.github.io/}
+  html={https://namkyeong.github.io/},
+  author_note={Work done as a Visiting Student at UIUC},
 }
 
 @preprints{lee2025RAG,
@@ -25,7 +26,8 @@
   author={Namkyeong Lee and Edward De Brouwer and Ehsan Hajiramezanali and Chanyoung Park and Gabriele Scalia},
   year={2025},
   url={https://arxiv.org/abs/2502.17506},
-  html={https://arxiv.org/abs/2502.17506}
+  html={https://arxiv.org/abs/2502.17506},
+  author_note={Work done during the Internship at Genentech},
 }
 
 
@@ -68,7 +70,8 @@
   year={2025},
   url={https://arxiv.org/html/2312.13289v2},
   html={https://arxiv.org/html/2312.13289v2},
-  code={https://github.com/Namkyeong/PCRL}
+  code={https://github.com/Namkyeong/PCRL},
+  author_note={Work done as a Visiting Student at UIUC},
 }
 
 
@@ -91,7 +94,8 @@
   year={2024},
   url={https://arxiv.org/abs/2407.09043},
   html={https://arxiv.org/abs/2407.09043},
-  code={https://github.com/Namkyeong/AMOLE}
+  code={https://github.com/Namkyeong/AMOLE},
+  author_note={Work done as a Visiting Student at UIUC},
 }
 
 @inproceedings{yoon2024debiased,
@@ -193,7 +197,8 @@
   html={https://arxiv.org/abs/2306.01792},
   code={https://github.com/Sein-Kim/TERACON},
   slides={slides_TERACON.pdf},
-  video={https://www.youtube.com/watch?v=4oW3Bwy9r6M&ab_channel=AssociationforComputingMachinery}
+  video={https://www.youtube.com/watch?v=4oW3Bwy9r6M&ab_channel=AssociationforComputingMachinery},
+  author_note={Work done during the Internship at NAVER Corp.},
 }
 
 
