add author notes

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,7 +50,8 @@
   year={2025},
   url={https://arxiv.org/abs/2412.02957},
   html={https://arxiv.org/abs/2412.02957},
-  code={https://github.com/Namkyeong/3DMRL}
+  code={https://github.com/Namkyeong/3DMRL},
+  author_note={Collaboration with KRICT},
 }
 
 @preprints{xu2024protein,
@@ -83,7 +84,8 @@
   year={2024},
   url={https://arxiv.org/html/2410.21341v1},
   html={https://arxiv.org/html/2410.21341v1},
-  code={https://github.com/HeewoongNoh/Retrieval-Retro}
+  code={https://github.com/HeewoongNoh/Retrieval-Retro},
+  author_note={Collaboration with KRICT}
 }
 
 @inproceedings{lee2024vision,
@@ -144,7 +146,8 @@
   year={2023},
   url={https://arxiv.org/abs/2311.12856},
   html={https://arxiv.org/abs/2311.12856},
-  code={https://github.com/HeewoongNoh/DOSTransformer}
+  code={https://github.com/HeewoongNoh/DOSTransformer},
+  author_note={Collaboration with KRICT}
 }
 
 
@@ -183,7 +186,8 @@
   code={https://github.com/Namkyeong/CMRL},
   slides={slides_CMRL.pdf},
   video={https://www.youtube.com/watch?v=KVhbwicqh5c&feature=youtu.be&ab_channel=AssociationforComputingMachinery},
-  news={https://n.news.naver.com/mnews/article/016/0002171153?sid=105}
+  news={https://n.news.naver.com/mnews/article/016/0002171153?sid=105},
+  author_note={Collaboration with KRICT}
 }
 
 
@@ -227,7 +231,8 @@
   slides={slides_CGIB.pdf},
   code={https://github.com/Namkyeong/CGIB},
   news={https://n.news.naver.com/mnews/article/016/0002171153?sid=105},
-  video={https://portal.valencelabs.com/events/post/conditional-graph-information-bottleneck-for-molecular-relational-learning-vBYw2hY2YVHWRT4}
+  video={https://portal.valencelabs.com/events/post/conditional-graph-information-bottleneck-for-molecular-relational-learning-vBYw2hY2YVHWRT4},
+  author_note={Collaboration with KRICT}
 }
 
 @workshops{lee2023predicting,
