--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -72,7 +72,7 @@
   url={https://arxiv.org/html/2312.13289v2},
   html={https://arxiv.org/html/2312.13289v2},
   code={https://github.com/Namkyeong/PCRL},
-  author_note={Work done as a Visiting Student at UIUC},
+  author_note={Collaboration with KRICT},
 }
 
 
