--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,6 +75,29 @@
   author_note={Collaboration with KRICT},
 }
 
+@inproceedings{kim2025thickness,
+  abbr={ICML},
+  title={Global Context-aware Representation Learning for Spatially Resolved Transcriptomics},
+  author={Yunhak Oh† and Junseok Lee† and Yeongmin Kim and Sangwoo Seo and Namkyeong Lee and Chanyoung Park},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2025},
+  url={https://namkyeong.github.io/publications/},
+  html={https://namkyeong.github.io/publications/},
+  code={https://namkyeong.github.io/publications/}
+}
+
+
+@inproceedings{kim2025thickness,
+  abbr={ICML},
+  title={Thickness-aware E(3)-Equivariant Mesh Neural Networks},
+  author={Sungwon Kim and Namkyeong Lee and Yunyoung Doh and Seungmin Shin and Guimok Cho and Seung-Won Jeon and Sangkook Kim and Chanyoung Park},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2025},
+  url={https://namkyeong.github.io/publications/},
+  html={https://namkyeong.github.io/publications/},
+  code={https://namkyeong.github.io/publications/}
+}
+
 
 @inproceedings{noh2024implicit,
   abbr={NeurIPS},
