--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,8 @@
   year={2025},
   url={https://namkyeong.github.io/publications/},
   html={https://namkyeong.github.io/publications/},
-  code={https://namkyeong.github.io/publications/}
+  code={https://namkyeong.github.io/publications/},
+  author_note={Collaboration with LG Electronics},
 }
 
 @preprints{kim2025MedRep,
