--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,9 +6,9 @@
   author={Yunhak Oh† and Junseok Lee† and Yeongmin Kim and Sangwoo Seo and Namkyeong Lee and Chanyoung Park},
   booktitle={International Conference on Machine Learning (ICML)},
   year={2025},
-  url={https://namkyeong.github.io/publications/},
-  html={https://namkyeong.github.io/publications/},
-  code={https://namkyeong.github.io/publications/}
+  url={https://arxiv.org/abs/2506.15698},
+  html={https://arxiv.org/abs/2506.15698},
+  code={https://github.com/yunhak0/Spotscape}
 }
 
 @inproceedings{kim2025thickness,
@@ -17,9 +17,8 @@
   author={Sungwon Kim and Namkyeong Lee and Yunyoung Doh and Seungmin Shin and Guimok Cho and Seung-Won Jeon and Sangkook Kim and Chanyoung Park},
   booktitle={International Conference on Machine Learning (ICML)},
   year={2025},
-  url={https://namkyeong.github.io/publications/},
-  html={https://namkyeong.github.io/publications/},
-  code={https://namkyeong.github.io/publications/},
+  url={https://arxiv.org/abs/2505.21572},
+  html={https://arxiv.org/abs/2505.21572},
   author_note={Collaboration with LG Electronics},
 }
 
@@ -83,8 +82,7 @@
   author={Bohao Xu and Yingzhou Lu and Yoshitaka Inoue and Namkyeong Lee and Tianfan Fu and Jintai Chen},
   year={2025},
   url={https://arxiv.org/abs/2409.14617},
-  html={https://arxiv.org/abs/2409.14617},
-  code={https://arxiv.org/abs/2409.14617}
+  html={https://arxiv.org/abs/2409.14617}
 }
 
 @preprints{lee2023compositional,
