--- a/_bibliography/papers copy.bib
+++ b/_bibliography/papers copy.bib
@@ -1,5 +1,27 @@
 ---
 ---
+@inproceedings{oh2025global,
+  abbr={ICML},
+  title={Global Context-aware Representation Learning for Spatially Resolved Transcriptomics},
+  author={Yunhak Oh† and Junseok Lee† and Yeongmin Kim and Sangwoo Seo and Namkyeong Lee and Chanyoung Park},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2025},
+  url={https://arxiv.org/abs/2506.15698},
+  html={https://arxiv.org/abs/2506.15698},
+  code={https://github.com/yunhak0/Spotscape}
+}
+
+@inproceedings{kim2025thickness,
+  abbr={ICML},
+  title={Thickness-aware E(3)-Equivariant Mesh Neural Networks},
+  author={Sungwon Kim and Namkyeong Lee and Yunyoung Doh and Seungmin Shin and Guimok Cho and Seung-Won Jeon and Sangkook Kim and Chanyoung Park},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2025},
+  url={https://arxiv.org/abs/2505.21572},
+  html={https://arxiv.org/abs/2505.21572},
+  author_note={Collaboration with LG Electronics},
+}
+
 @preprints{kim2025MedRep,
   abbr={Preprint},
   title={MedRep: Medical Concept Representation for General Electronic Health Record Foundation Models},
@@ -10,6 +32,15 @@
   code={https://github.com/kicarussays/MedRep}
 }
 
+@preprints{laghuvarapu2025MolTextQA,
+  abbr={Preprint},
+  title={MolTextQA: A Curated Question-Answering Dataset and Benchmark for Molecular Structure-Text Relationship Learning},
+  author={Siddhartha Laghuvarapu and Namkyeong Lee and Chufan Gao and Jimeng Sun},
+  year={2025},
+  url={https://namkyeong.github.io/},
+  html={https://namkyeong.github.io/},
+  author_note={Work done as a Visiting Student at UIUC},
+}
 
 @preprints{lee2025RAG,
   abbr={Preprint},
@@ -20,6 +51,19 @@
   html={https://arxiv.org/abs/2502.17506},
   author_note={Work done during the Internship at Genentech},
 }
+
+
+@inproceedings{kim2025subgraph,
+  abbr={ICLR},
+  title={Subgraph Federated Learning for Local Generalization},
+  author={Sungwon Kim and Yoonho Lee and Yunhak Oh and Namkyeong Lee and Sukwon Yun and Junseok Lee and Sein Kim and Carl Yang and Chanyoung Park},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2025},
+  url={https://openreview.net/forum?id=cH65nS5sOz},
+  html={https://openreview.net/forum?id=cH65nS5sOz},
+  code={https://github.com/sung-won-kim/FedLoG}
+}
+
 
 @preprints{lee20243D,
   abbr={Preprint},
@@ -50,53 +94,6 @@
   html={https://arxiv.org/html/2312.13289v2},
   code={https://github.com/Namkyeong/PCRL},
   author_note={Collaboration with KRICT},
-}
-
-@inproceedings{laghuvarapu2025MolTextQA,
-  abbr={DMLR},
-  title={MolTextQA: A Curated Question-Answering Dataset and Benchmark for Molecular Structure-Text Relationship Learning},
-  author={Siddhartha Laghuvarapu and Namkyeong Lee and Chufan Gao and Jimeng Sun},
-  booktitle={Journal of Data-centric Machine Learning Research (DMLR)},
-  year={2025},
-  url={https://namkyeong.github.io/},
-  html={https://namkyeong.github.io/},
-  author_note={Work done as a Visiting Student at UIUC},
-}
-
-@inproceedings{oh2025global,
-  abbr={ICML},
-  title={Global Context-aware Representation Learning for Spatially Resolved Transcriptomics},
-  author={Yunhak Oh† and Junseok Lee† and Yeongmin Kim and Sangwoo Seo and Namkyeong Lee and Chanyoung Park},
-  booktitle={International Conference on Machine Learning (ICML)},
-  year={2025},
-  url={https://arxiv.org/abs/2506.15698},
-  html={https://arxiv.org/abs/2506.15698},
-  code={https://github.com/yunhak0/Spotscape}
-}
-
-@inproceedings{kim2025thickness,
-  abbr={ICML},
-  title={Thickness-aware E(3)-Equivariant Mesh Neural Networks},
-  author={Sungwon Kim and Namkyeong Lee and Yunyoung Doh and Seungmin Shin and Guimok Cho and Seung-Won Jeon and Sangkook Kim and Chanyoung Park},
-  booktitle={International Conference on Machine Learning (ICML)},
-  year={2025},
-  url={https://arxiv.org/abs/2505.21572},
-  html={https://arxiv.org/abs/2505.21572},
-  author_note={Collaboration with LG Electronics},
-}
-
-
-
-
-@inproceedings{kim2025subgraph,
-  abbr={ICLR},
-  title={Subgraph Federated Learning for Local Generalization},
-  author={Sungwon Kim and Yoonho Lee and Yunhak Oh and Namkyeong Lee and Sukwon Yun and Junseok Lee and Sein Kim and Carl Yang and Chanyoung Park},
-  booktitle={International Conference on Learning Representations (ICLR)},
-  year={2025},
-  url={https://openreview.net/forum?id=cH65nS5sOz},
-  html={https://openreview.net/forum?id=cH65nS5sOz},
-  code={https://github.com/sung-won-kim/FedLoG}
 }
 
 @inproceedings{noh2024implicit,
@@ -186,11 +183,11 @@
 }
 
 
-@inproceedings{lee2023deep,
+@article{lee2023deep,
   abbr={Bioinformatics},
   title={Deep single-cell RNA-seq data clustering with graph prototypical contrastive learning},
   author={Junseok Lee and Sungwon Kim and Dongmin Hyun and Namkyeong Lee and Yejin Kim and Chanyoung Park},
-  booktitle={Bioinformatics},
+  journal={Bioinformatics},
   year={2023},
   url={https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/btad342/7180270},
   html={https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/btad342/7180270},
@@ -282,11 +279,11 @@
 }
 
 
-@inproceedings{lee2022self,
+@article{lee2022self,
   abbr={Info Sci},
   title={Self-Supervised Graph Representation Learning via Positive Mining},
   author={Namkyeong Lee and Junseok Lee and Chanyoung Park},
-  booktitle={Information Sciences},
+  journal={Information Sciences},
   year={2022},
   url={https://www.sciencedirect.com/science/article/pii/S0020025522009495?via%3Dihub},
   html={https://www.sciencedirect.com/science/article/pii/S0020025522009495?via%3Dihub},
