--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -58,8 +58,9 @@
   author={Siddhartha Laghuvarapu and Namkyeong Lee and Chufan Gao and Jimeng Sun},
   booktitle={Journal of Data-centric Machine Learning Research (DMLR)},
   year={2025},
-  url={https://namkyeong.github.io/},
-  html={https://namkyeong.github.io/},
+  url={https://openreview.net/forum?id=tFfqvKE2J5},
+  html={https://openreview.net/forum?id=tFfqvKE2J5},
+  code={https://github.com/siddharthal/MolTextQA},
   author_note={Work done as a Visiting Student at UIUC},
 }
 
@@ -71,7 +72,8 @@
   year={2025},
   url={https://arxiv.org/abs/2506.15698},
   html={https://arxiv.org/abs/2506.15698},
-  code={https://github.com/yunhak0/Spotscape}
+  code={https://github.com/yunhak0/Spotscape},
+  slides={https://dsail.kaist.ac.kr/files/ICML25_Spotscape_slide.pdf},
 }
 
 @inproceedings{kim2025thickness,
@@ -83,31 +85,33 @@
   url={https://arxiv.org/abs/2505.21572},
   html={https://arxiv.org/abs/2505.21572},
   author_note={Collaboration with LG Electronics},
+  slides={https://dsail.kaist.ac.kr/files/ICML25_TEMNN_slide.pdf},
+  news={https://www.joongang.co.kr/article/25324013}
 }
 
-
-
-
 @inproceedings{kim2025subgraph,
-  abbr={ICLR},
+  abbr={ICLR (Oral)},
   title={Subgraph Federated Learning for Local Generalization},
   author={Sungwon Kim and Yoonho Lee and Yunhak Oh and Namkyeong Lee and Sukwon Yun and Junseok Lee and Sein Kim and Carl Yang and Chanyoung Park},
   booktitle={International Conference on Learning Representations (ICLR)},
   year={2025},
   url={https://openreview.net/forum?id=cH65nS5sOz},
   html={https://openreview.net/forum?id=cH65nS5sOz},
-  code={https://github.com/sung-won-kim/FedLoG}
+  code={https://github.com/sung-won-kim/FedLoG},
+  slides={https://dsail.kaist.ac.kr/files/ICLR25_FEDLOG_slide.pdf}
 }
 
 @inproceedings{noh2024implicit,
   abbr={NeurIPS},
-  title={Implicit Precursor Extraction with Expert Retriever for Inorganic Retrosynthesis},
+  title={Retrieval-Retro: Retrieval-based Inorganic Retrosynthesis with Expert Knowledge},
   author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Chanyoung Park},
   booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
   year={2024},
   url={https://arxiv.org/html/2410.21341v1},
   html={https://arxiv.org/html/2410.21341v1},
   code={https://github.com/HeewoongNoh/Retrieval-Retro},
+  slides={https://dsail.kaist.ac.kr/files/NeurIPS24_RetrievalRetro_slide.pdf},
+  video={https://slideslive.com/39028754/retrievalretro-retrievalbased-inorganic-retrosynthesis-with-expert-knowledge?ref=speaker-100700},
   author_note={Collaboration with KRICT}
 }
 
@@ -120,6 +124,7 @@
   url={https://arxiv.org/abs/2407.09043},
   html={https://arxiv.org/abs/2407.09043},
   code={https://github.com/Namkyeong/AMOLE},
+  slides={https://dsail.kaist.ac.kr/files/CIKM24_AMOLE_slide.pdf},
   author_note={Work done as a Visiting Student at UIUC},
 }
 
@@ -131,6 +136,7 @@
   year={2024},
   url={https://arxiv.org/abs/2407.19155},
   html={https://arxiv.org/abs/2407.19155},
+  slides={https://dsail.kaist.ac.kr/files/CIKM24_metacon_slide.pdf},
   code={https://github.com/KanghoonYoon/torch-metacon}
 }
 
@@ -170,6 +176,7 @@
   url={https://arxiv.org/abs/2311.12856},
   html={https://arxiv.org/abs/2311.12856},
   code={https://github.com/HeewoongNoh/DOSTransformer},
+  video={https://slideslive.com/39010914/density-of-states-prediction-of-crystalline-materials-via-promptguided-multimodal-transformer?ref=speaker-100700},
   author_note={Collaboration with KRICT}
 }
 
