update IR Agent

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,17 @@
 ---
 @preprints{kim2025MedRep,
   abbr={Preprint},
+  title={IR-Agent: Expert-Inspired LLM Agents for Structure Elucidation from Infrared Spectra},
+  author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Kibum Kim and Chanyoung Park},
+  year={2025},
+  url={https://arxiv.org/abs/2508.16112},
+  html={https://arxiv.org/abs/2508.16112},
+  code={https://github.com/HeewoongNoh/IR-Agent}
+}
+
+
+@preprints{kim2025MedRep,
+  abbr={Preprint},
   title={MedRep: Medical Concept Representation for General Electronic Health Record Foundation Models},
   author={Junmo Kim and Namkyeong Lee and Jiwon Kim and Kwangsoo Kim},
   year={2025},
