--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -32,10 +32,11 @@
   author_note={Work done during the Internship at Genentech},
 }
 
-@preprints{lee20243D,
-  abbr={Preprint},
+@inproceedings{lee20243D,
+  abbr={NeurIPS (Spotlight)},
   title={3D Interaction Geometric Pre-training for Molecular Relational Learning},
   author={Namkyeong Lee and Yunhak Oh and Heewoong Noh and Gyoung S. Na and Minkai Xu and Hanchen Wang and Tianfan Fu and Chanyoung Park},
+  booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
   year={2025},
   url={https://arxiv.org/abs/2412.02957},
   html={https://arxiv.org/abs/2412.02957},
