--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -33,7 +33,7 @@
 }
 
 @inproceedings{lee20243D,
-  abbr={NeurIPS (Spotlight)},
+  abbr={NeurIPS <br> (Spotlight)},
   title={3D Interaction Geometric Pre-training for Molecular Relational Learning},
   author={Namkyeong Lee and Yunhak Oh and Heewoong Noh and Gyoung S. Na and Minkai Xu and Hanchen Wang and Tianfan Fu and Chanyoung Park},
   booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
@@ -102,7 +102,7 @@
 }
 
 @inproceedings{kim2025subgraph,
-  abbr={ICLR (Oral)},
+  abbr={ICLR <br> (Oral)},
   title={Subgraph Federated Learning for Local Generalization},
   author={Sungwon Kim and Yoonho Lee and Yunhak Oh and Namkyeong Lee and Sukwon Yun and Junseok Lee and Sein Kim and Carl Yang and Chanyoung Park},
   booktitle={International Conference on Learning Representations (ICLR)},
@@ -328,7 +328,7 @@
 
 
 @inproceedings{lee2022semi,
-  abbr={SIGIR Short},
+  abbr={SIGIR <br> Short},
   title={GraFN: Semi-Supervised Graph Node Classification with Few Labels via Non-Parametric Distribution Assignment},
   author={Junseok Lee and Yunhak Oh and Yeonjun In and Namkyeong Lee and Dongmin Hyun and Chanyoung Park},
   booktitle={ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR)},
