--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,9 +23,10 @@
 
 
 @preprints{lee2025RAG,
-  abbr={Preprint},
+  abbr={AAAI},
   title={RAG-Enhanced Collaborative LLM Agents for Drug Discovery},
   author={Namkyeong Lee and Edward De Brouwer and Ehsan Hajiramezanali and Chanyoung Park and Gabriele Scalia},
+  booktitle={AAAI Conference on Artificial Intelligence (AAAI)},
   year={2025},
   url={https://arxiv.org/abs/2502.17506},
   html={https://arxiv.org/abs/2502.17506},
