--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,6 @@
 ---
 ---
-@preprints{kim2025MedRep,
+@preprints{noh2025ir,
   abbr={Preprint},
   title={IR-Agent: Expert-Inspired LLM Agents for Structure Elucidation from Infrared Spectra},
   author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Kibum Kim and Chanyoung Park},
@@ -22,7 +22,7 @@
 }
 
 
-@preprints{lee2025RAG,
+@inproceedings{lee2025RAG,
   abbr={AAAI},
   title={RAG-Enhanced Collaborative LLM Agents for Drug Discovery},
   author={Namkyeong Lee and Edward De Brouwer and Ehsan Hajiramezanali and Chanyoung Park and Gabriele Scalia},
