--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
 @inproceedings{lee2025RAG,
   abbr={AAAI},
   title={RAG-Enhanced Collaborative LLM Agents for Drug Discovery},
-  author={Namkyeong Lee and Edward De Brouwer and Ehsan Hajiramezanali and Chanyoung Park and Gabriele Scalia},
+  author={Namkyeong Lee and Edward De Brouwer and Ehsan Hajiramezanali and Tommaso Biancalani and Chanyoung Park and Gabriele Scalia},
   booktitle={AAAI Conference on Artificial Intelligence (AAAI)},
   year={2026},
   url={https://arxiv.org/abs/2502.17506},
