--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,6 +30,7 @@
   year={2026},
   url={https://arxiv.org/abs/2502.17506},
   html={https://arxiv.org/abs/2502.17506},
+  code={https://github.com/Genentech/CLADD},
   author_note={Work done during the Internship at Genentech},
 }
 
