--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -43,6 +43,7 @@
   url={https://arxiv.org/abs/2412.02957},
   html={https://arxiv.org/abs/2412.02957},
   code={https://github.com/Namkyeong/3DMRL},
+  slides={slides_3DMRL.pdf},
   author_note={Collaboration with KRICT},
 }
 
