--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,16 +1,5 @@
 ---
 ---
-@preprints{noh2025ir,
-  abbr={Preprint},
-  title={IR-Agent: Expert-Inspired LLM Agents for Structure Elucidation from Infrared Spectra},
-  author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Kibum Kim and Chanyoung Park},
-  year={2025},
-  url={https://arxiv.org/abs/2508.16112},
-  html={https://arxiv.org/abs/2508.16112},
-  code={https://github.com/HeewoongNoh/IR-Agent}
-}
-
-
 @preprints{kim2025MedRep,
   abbr={Preprint},
   title={MedRep: Medical Concept Representation for General Electronic Health Record Foundation Models},
@@ -19,6 +8,37 @@
   url={https://arxiv.org/abs/2504.08329},
   html={https://arxiv.org/abs/2504.08329},
   code={https://github.com/kicarussays/MedRep}
+}
+
+@preprints{xu2024protein,
+  abbr={Preprint},
+  title={Protein-Mamba: Biological Mamba Models for Protein Function Prediction},
+  author={Bohao Xu and Yingzhou Lu and Yoshitaka Inoue and Namkyeong Lee and Tianfan Fu and Jintai Chen},
+  year={2025},
+  url={https://arxiv.org/abs/2409.14617},
+  html={https://arxiv.org/abs/2409.14617}
+}
+
+@preprints{lee2023compositional,
+  abbr={Preprint},
+  title={Compositional Representation of Polymorphic Crystalline Materials},
+  author={Namkyeong Lee and Heewoong Noh and Gyoung S. Na and Jimeng Sun and Tianfan Fu and Marinka Zitnik and Chanyoung Park},
+  year={2025},
+  url={https://arxiv.org/html/2312.13289v2},
+  html={https://arxiv.org/html/2312.13289v2},
+  code={https://github.com/Namkyeong/PCRL},
+  author_note={Collaboration with KRICT},
+}
+
+@preprints{noh2025ir,
+  abbr={ICLR},
+  title={IR-Agent: Expert-Inspired LLM Agents for Structure Elucidation from Infrared Spectra},
+  author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Kibum Kim and Chanyoung Park},
+  year={2026},
+  url={https://arxiv.org/abs/2508.16112},
+  html={https://arxiv.org/abs/2508.16112},
+  code={https://github.com/HeewoongNoh/IR-Agent},
+  author_note={Collaboration with KRICT}
 }
 
 
@@ -47,25 +67,6 @@
   author_note={Collaboration with KRICT},
 }
 
-@preprints{xu2024protein,
-  abbr={Preprint},
-  title={Protein-Mamba: Biological Mamba Models for Protein Function Prediction},
-  author={Bohao Xu and Yingzhou Lu and Yoshitaka Inoue and Namkyeong Lee and Tianfan Fu and Jintai Chen},
-  year={2025},
-  url={https://arxiv.org/abs/2409.14617},
-  html={https://arxiv.org/abs/2409.14617}
-}
-
-@preprints{lee2023compositional,
-  abbr={Preprint},
-  title={Compositional Representation of Polymorphic Crystalline Materials},
-  author={Namkyeong Lee and Heewoong Noh and Gyoung S. Na and Jimeng Sun and Tianfan Fu and Marinka Zitnik and Chanyoung Park},
-  year={2025},
-  url={https://arxiv.org/html/2312.13289v2},
-  html={https://arxiv.org/html/2312.13289v2},
-  code={https://github.com/Namkyeong/PCRL},
-  author_note={Collaboration with KRICT},
-}
 
 @inproceedings{laghuvarapu2025MolTextQA,
   abbr={DMLR},
