--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,10 +30,11 @@
   author_note={Collaboration with KRICT},
 }
 
-@preprints{noh2025ir,
+@preprints{noh2026ir,
   abbr={ICLR},
   title={IR-Agent: Expert-Inspired LLM Agents for Structure Elucidation from Infrared Spectra},
   author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Kibum Kim and Chanyoung Park},
+  booktitle={International Conference on Learning Representations (ICLR)},
   year={2026},
   url={https://arxiv.org/abs/2508.16112},
   html={https://arxiv.org/abs/2508.16112},
