--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@
   author_note={Collaboration with KRICT},
 }
 
-@preprints{noh2026ir,
+@inproceedings{noh2026ir,
   abbr={ICLR},
   title={IR-Agent: Expert-Inspired LLM Agents for Structure Elucidation from Infrared Spectra},
   author={Heewoong Noh and Namkyeong Lee and Gyoung S. Na and Kibum Kim and Chanyoung Park},
