--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@preprints{noh2025MSP,
+  abbr={Preprint},
+  title={MSP-LLM: A Unified Large Language Model Framework for Complete Material Synthesis Planning},
+  author={Heewoong Noh and Gyoung S. Na and Namkyeong Lee and Chanyoung Park},
+  url={https://www.arxiv.org/abs/2602.07543},
+  html={https://www.arxiv.org/abs/2602.07543},
+  code={https://github.com/HeewoongNoh/MSP-LLM-Official}
+}
+
 @preprints{kim2025MedRep,
   abbr={Preprint},
   title={MedRep: Medical Concept Representation for General Electronic Health Record Foundation Models},
